feat(app): create global styles and init to create table for products

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<bank-products-nav-bar></bank-products-nav-bar>
-<router-outlet></router-outlet>
+<div class="container">
+    <bank-products-nav-bar></bank-products-nav-bar>
+    <router-outlet></router-outlet>
+</div>
