--- a/src/app/modules/products/components/products-list/products-list.component.html
+++ b/src/app/modules/products/components/products-list/products-list.component.html
@@ -1,1 +1,43 @@
-<p>products-list works!</p>
+<section class="products-list">
+    <div class="products-list__head d-flex j-space-bet a-items-cen">
+        <div class="form-control">
+            <input type="text" placeholder="Search...">
+        </div>
+        <button class="btn">Agregar</button>
+    </div>
+    <div class="products-list__table mt-1">
+        <table>
+            <thead>
+                <tr>
+                    <th>Logo</th>
+                    <th>Nombre del producto</th>
+                    <th>Descripción</th>
+                    <th>Fecha de liberación</th>
+                    <th>Fecha de reestructuración</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <div class="logo">
+                            <img src="https://www.visa.com.ec/dam/VCOM/regional/lac/SPA/Default/Pay%20With%20Visa/Tarjetas/visa-signature-400x225.jpg"
+                            />
+                        </div>
+                    </td>
+                    <td>Nombre del producto</td>
+                    <td>Descripción</td>
+                    <td>01/01/2001</td>
+                    <td>01/01/2001</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">5 resultados</td>
+                    <td>Select</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+    <!-- <button class="btn btn-secundary">Agregar</button> -->
+
+</section>
