--- a/src/app/shared/styles/colors.scss
+++ b/src/app/shared/styles/colors.scss
@@ -1,8 +1,9 @@
 $white: #ffff;
+$black: #0000;
 $gray-00: #f4f7f8;
 $gray-05: #ebedf2;
 $gray-10: #c0c7d9;
 $gray-20: #aeaeb3;
 $yellow: #f9df4a;
-$blue: #0e255f;
+$blue: #0f265c;
 $red: #e73c17;
