--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
+@import 'src/app/shared/styles/buttons';
+@import 'src/app/shared/styles/inputs';
+@import 'src/app/shared/styles/margins';
+@import 'src/app/shared/styles/layout';
+
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 html {
-  font-size: 62.5% !important;
-  scroll-behavior: smooth;
+    font-size: 62.5% !important;
+    scroll-behavior: smooth;
+    font-family: 'Open Sans', sans-serif;
 }
