--- a/src/app/shared/styles/layout.scss
+++ b/src/app/shared/styles/layout.scss
@@ -18,6 +18,10 @@
     justify-content: space-between;
 }
 
+.j-space-end {
+    justify-content: end;
+}
+
 .a-items-cen {
     align-items: center;
 }
