--- a/src/app/modules/products/components/products-list/products-list.component.scss
+++ b/src/app/modules/products/components/products-list/products-list.component.scss
@@ -7,6 +7,7 @@
     &__table {
         background-color: $white;
         padding: 1.5rem;
+
         table {
             border-collapse: collapse;
             width: 100%;
@@ -20,25 +21,32 @@
             tbody {
                 tr {
                     height: 4rem;
+
                     .logo {
                         width: 3rem;
                         height: 3rem;
                         border-radius: 100%;
                         overflow: hidden;
                         margin: auto;
+
                         img {
                             width: 100%;
                             height: 100%;
                             object-fit: cover;
                         }
                     }
-                    border-bottom: 1px solid $gray-05;;
+
+                    border-bottom: 1px solid $gray-05;
+                    ;
                 }
             }
 
             tfoot {
                 height: 5rem;
-                display: f;
+
+                tr td:first-child {
+                    text-align: start;
+                }
             }
         }
     }
