feat(product-form): Initialize form to create and edit

--- a/src/app/modules/products/components/product-form/product-form.component.html
+++ b/src/app/modules/products/components/product-form/product-form.component.html
@@ -1,1 +1,37 @@
-<p>product-form works!</p>
+<section class="product d-flex j-cont-cen">
+    <form class="product__form">
+        <div class="product__form__head">
+            <h2>Formulario de Registro</h2>
+        </div>
+        <div class="product__form__body">
+            <div class="form-control">
+                <label for="id">ID</label>
+                <input id="id" type="text">
+            </div>
+            <div class="form-control">
+                <label for="name">Nombre</label>
+                <input id="name" type="text">
+            </div>
+            <div class="form-control">
+                <label for="description">Descripcion</label>
+                <input id="description" type="text">
+            </div>
+            <div class="form-control">
+                <label for="logo">Logo</label>
+                <input id="logo" type="text">
+            </div>
+            <div class="form-control">
+                <label for="logo">Fecha de liberación</label>
+                <input id="logo" type="date">
+            </div>
+            <div class="form-control">
+                <label for="logo">Fecha de revisión</label>
+                <input id="logo" type="date">
+            </div>
+        </div>
+        <div class="product__form__foot d-flex j-cont-cen">
+            <button class="btn btn-secundary">Reiniciar</button>
+            <button class="btn">Enviar</button>
+        </div>
+    </form>
+</section>
