--- a/src/app/shared/styles/inputs.scss
+++ b/src/app/shared/styles/inputs.scss
@@ -3,12 +3,13 @@
     flex-direction: column;
     label {
         font-weight: 700;
+        margin-bottom: .8rem;
     }
     input, select{
         border-radius: 0.3rem;
         border: 1px solid $gray-20;
-        height: 2.5rem;
-        max-width: 16rem;
+        height: 3.5rem;
+        // max-width: 16rem;
         font-size: 1rem;
         padding: 0.5rem;
         &:focus{
