--- a/src/app/modules/products/components/product-form/product-form.component.scss
+++ b/src/app/modules/products/components/product-form/product-form.component.scss
@@ -5,7 +5,7 @@
 
     &__form {
         width: 100%;
-        max-width: 600px;
+        max-width: 60rem;
         background-color: $white;
 
         &__head {
@@ -27,7 +27,7 @@
         }
 
         &__foot {
-            gap: 40px;
+            gap: 3rem;
             padding: 3rem 0;
         }
     }
