--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,3 +1,6 @@
 <nav class="nav-bar">
-    <img ngSrc="https://upload.wikimedia.org/wikipedia/commons/4/45/Banco_Pichincha_nuevo.png" width="105" height="25" />
+    <a [routerLink]="['/']">
+        <img ngSrc="https://upload.wikimedia.org/wikipedia/commons/4/45/Banco_Pichincha_nuevo.png" width="105"
+            height="25" />
+    </a>
 </nav>
