--- a/src/app/modules/products/components/products-list/products-list.component.scss
+++ b/src/app/modules/products/components/products-list/products-list.component.scss
@@ -57,3 +57,62 @@
         }
     }
 }
+
+
+/* Dropdown container */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    &:hover &__content {
+        display: block;
+    }
+
+    &__btn {
+        background-color: transparent;
+        color: $gray-20;
+        padding: .5rem;
+        font-size: 1.6rem;
+        border: none;
+        cursor: pointer;
+
+    }
+
+
+    &__content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+
+        a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+
+            &:hover {
+                background-color: #ddd;
+
+            }
+        }
+    }
+}
+
+/* Dropdown button */
+.dropbtn {}
+
+/* Dropdown content (hidden by default) */
+
+/* Links inside the dropdown */
+.dropdown-content a {}
+
+/* Change color on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
