--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,9 @@ body {
     max-width: 100vw;
     overflow-x: hidden;
 }
+ul {
+    list-style: none;
+}
 
 html {
     font-size: 62.5% !important;
